--- a/examples/basics/13_dbinput/etl.cfg
+++ b/examples/basics/13_dbinput/etl.cfg
@@ -10,7 +10,7 @@ chains = input_sqlite_all|convert_records_to_json|output_cities_file,
 
 # Read all records from SQLite DB into record array
 [input_sqlite_all]
-class = inputs.dbinput.SqliteDbInput
+class = stetl.inputs.dbinput.SqliteDbInput
 output_format = record_array
 database_name = input/cities.sdb
 table = cities
@@ -19,7 +19,7 @@ query = select * from cities
 
 # Use the standard converter to convert record array to struct (dict)
 [convert_records_to_json]
-class = filters.formatconverter.FormatConverter
+class = stetl.filters.formatconverter.FormatConverter
 input_format = record_array
 output_format = struct
 converter_args = {
@@ -27,7 +27,7 @@ converter_args = {
     }
 
 [output_cities_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/cities.json
 
 #
@@ -36,7 +36,7 @@ file_path = output/cities.json
 
 # Read single record from SQLite DB into record
 [input_sqlite_single]
-class = inputs.dbinput.SqliteDbInput
+class = stetl.inputs.dbinput.SqliteDbInput
 output_format = record
 database_name = input/cities.sdb
 table = cities
@@ -45,7 +45,7 @@ query = select * from cities where name = 'Rome'
 
 # Use the standard converter to convert record to struct (dict)
 [convert_record_to_json]
-class = filters.formatconverter.FormatConverter
+class = stetl.filters.formatconverter.FormatConverter
 input_format = record
 output_format = struct
 converter_args = {
@@ -53,7 +53,7 @@ converter_args = {
     }
 
 [output_city_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/city.json
 
 
