--- a/examples/basics/14_logfileinput/etl.cfg
+++ b/examples/basics/14_logfileinput/etl.cfg
@@ -5,7 +5,7 @@ chains = input_apache_log|to_record_array|output_std
 
 # Transform apache log to records
 [input_apache_log]
-class = inputs.fileinput.ApacheLogFileInput
+class = stetl.inputs.fileinput.ApacheLogFileInput
 log_format = %h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\" %D
 key_map = {'%>s': 'status', '%D': 'deltat', '%{User-agent}i': 'agent', '%b': 'bytes', '%{Referer}i': 'referer', '%t': 'time', "'%h": 'host', '%r': 'request'}
 file_path = input
@@ -13,7 +13,7 @@ filename_pattern = *.log
 
 # The GML must be a simple features collection
 [to_record_array]
-class = filters.formatconverter.FormatConverter
+class = stetl.filters.formatconverter.FormatConverter
 input_format = record
 output_format = record_array
 converter_args = {
@@ -22,4 +22,4 @@ converter_args = {
 
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
