--- a/examples/basics/15_splitter/etl.cfg
+++ b/examples/basics/15_splitter/etl.cfg
@@ -7,16 +7,16 @@ chains = input_xml_file|transformer_xslt|(output_file)(output_std),
 
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input/cities.xml
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/gmlcities.gml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
