--- a/examples/basics/16_merger/etl.cfg
+++ b/examples/basics/16_merger/etl.cfg
@@ -6,20 +6,20 @@ chains = (input_1) (input_2)|transformer_xslt|output_std,
 
 
 [input_1]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input1/cities.xml
 
 [input_2]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input2/cities.xml
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/gmlcities.gml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
