--- a/examples/basics/3_shape/etl.cfg
+++ b/examples/basics/3_shape/etl.cfg
@@ -4,17 +4,17 @@
 chains = input_xml_file|transformer_xslt|output_ogr_shape
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input/cities.xml
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 # The ogr2ogr command-line. May be split over multiple lines for readability.
 # Backslashes not required in that case.
 [output_ogr_shape]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = temp/gmlcities.gml
 ogr2ogr_cmd = ogr2ogr
     -overwrite
