--- a/examples/basics/4_validate/etl.cfg
+++ b/examples/basics/4_validate/etl.cfg
@@ -4,20 +4,20 @@
 chains = input_xml_file|transformer_xslt|xml_schema_validator|output_file
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input/cities.xml
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 # Validator for XML
 [xml_schema_validator]
-class = filters.xmlvalidator.XmlSchemaValidator
+class = stetl.filters.xmlvalidator.XmlSchemaValidator
 xsd = gmlcities.xsd
 enabled = True
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/gmlcities.gml
 
