--- a/examples/basics/5_split/etl.cfg
+++ b/examples/basics/5_split/etl.cfg
@@ -9,13 +9,13 @@ chains = input_big_xml_file|xml_assembler|transformer_xslt|multi_output_file,
 # The source input file (assume N GB XML files here...)
 # "file_path" may be a directory, comma-separated files etc
 [input_big_xml_file]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = input
 element_tags = city
 
 # Assembles etree docs from GML elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = 2
 container_doc = <?xml version='1.0' encoding='utf-8'?>
    <cities>
@@ -23,12 +23,12 @@ container_doc = <?xml version='1.0' encoding='utf-8'?>
 element_container_tag = cities
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 [multi_output_file]
-class = outputs.fileoutput.MultiFileOutput
+class = stetl.outputs.fileoutput.MultiFileOutput
 file_path = output/gmlcities-%03d.gml
 
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
