--- a/examples/basics/7_mycomponent/etl.cfg
+++ b/examples/basics/7_mycomponent/etl.cfg
@@ -4,7 +4,7 @@
 chains = input_xml_file|my_filter|output_std
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input/cities.xml
 
 # My custom component
@@ -12,4 +12,4 @@ file_path = input/cities.xml
 class = my.myfilter.MyFilter
 
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
