--- a/examples/basics/8_wfs/etl.cfg
+++ b/examples/basics/8_wfs/etl.cfg
@@ -4,7 +4,7 @@
 chains = input_wfs|output_std
 
 [input_wfs]
-class = inputs.httpinput.HttpInput
+class = stetl.inputs.httpinput.HttpInput
 url = http://geodata.nationaalgeoregister.nl/bag/wfs
 parameters = {
 		'service' : 'WFS',
@@ -18,4 +18,4 @@ parameters = {
 
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
