--- a/examples/basics/9_string_templating/etl.cfg
+++ b/examples/basics/9_string_templating/etl.cfg
@@ -7,18 +7,18 @@
 chains = input_csv|filter_template|output_file
 
 [input_csv]
-class = inputs.fileinput.CsvFileInput
+class = stetl.inputs.fileinput.CsvFileInput
 file_path = input/city.csv
 output_format = record
 
 [filter_template]
-class = filters.templatingfilter.StringTemplatingFilter
+class = stetl.filters.templatingfilter.StringTemplatingFilter
 template_file = city_template.xml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/city.xml
 
