--- a/examples/bgt/etl-bgt-postgis.cfg
+++ b/examples/bgt/etl-bgt-postgis.cfg
@@ -7,13 +7,13 @@ chains = input_big_gml_files|xml_assembler|transformer_xslt|output_ogr2ogr_postg
 
 # The source input file(s) from dir and produce gml:featureMember elements
 [input_big_gml_files]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = {gml_input}
 element_tags = cityObjectMember
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = {max_in_memory_features}
 container_doc = <?xml version="1.0" encoding="UTF-8"?>
     <cit:CityModel xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -35,13 +35,13 @@ container_doc = <?xml version="1.0" encoding="UTF-8"?>
 element_container_tag = CityModel
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = bgt-to-gmlfc-all.xsl
 
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
 
 [output_ogr2ogr_postgis]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = output/temp.gml
 ogr2ogr_cmd = ogr2ogr -f "Postgresql" PG:"host={host} port={port} user={user} dbname={database} password={password} active_schema={schema}" -a_srs epsg:28992 -dim 2 -overwrite -preserve_fid output/temp.gml
