--- a/examples/inspire/ad-bag-nl/deegreeinput.cfg
+++ b/examples/inspire/ad-bag-nl/deegreeinput.cfg
@@ -6,7 +6,7 @@ chains = input_deegree_blobstore|output_file
 
 # Get DOM document from GML blobs in deegree blobstore tables
 [input_deegree_blobstore]
-class = inputs.deegreeinput.DeegreeBlobstoreInput
+class = stetl.inputs.deegreeinput.DeegreeBlobstoreInput
 database = pdok
 schema = inspire_ad
 host     = localhost
@@ -40,11 +40,11 @@ end_feature_tag = </base:member>
 
 # Output: print DOM document to stdout
 [output_std]
-class = output.Output
+class = stetl.output.Output
 
 # Output: print DOM document to file
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = inspire-ad-spatialds.gml
 
 
