--- a/examples/inspire/ad-bag-nl/inspire-ad.cfg
+++ b/examples/inspire/ad-bag-nl/inspire-ad.cfg
@@ -12,7 +12,7 @@ chains = input_pg_woonplaats|gml_splitter|transformer_xslt|output_deegree_blobst
 		 input_pg_verblijfsobject|gml_splitter|transformer_xslt|output_deegree_blobstore
 
 [input_pg_woonplaats]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = bagaveen
@@ -33,7 +33,7 @@ out_gml_format = GML3
 out_dimension = 2
 
 [input_pg_postcode]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = bagaveen
@@ -51,7 +51,7 @@ out_gml_format = GML3
 out_dimension = 2
 
 [input_pg_openbareruimte]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = bagaveen
@@ -72,7 +72,7 @@ out_gml_format = GML3
 out_dimension = 2
 
 [input_pg_verblijfsobject]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = public
@@ -107,7 +107,7 @@ out_gml_format = GML3
 out_dimension = 2
 
 [input_pg_ligplaats]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = bagaveen
@@ -142,7 +142,7 @@ out_gml_format = GML3
 out_dimension = 2
 
 [input_pg_standplaats]
-class = inputs.ogrinput.OgrPostgisInput
+class = stetl.inputs.ogrinput.OgrPostgisInput
 in_srs = EPSG:28992
 in_pg_db = bag
 in_pg_schema = bagaveen
@@ -177,14 +177,14 @@ out_gml_format = GML3
 out_dimension = 2
 
 [output_std]
-class = output.Output
+class = stetl.output.Output
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = test/output.gml
 
 [output_deegree_blobstore]
-class = outputs.deegreeoutput.DeegreeBlobstoreOutput
+class = stetl.outputs.deegreeoutput.DeegreeBlobstoreOutput
 overwrite = False
 feature_member_tag = member
 srid = -1
@@ -196,7 +196,7 @@ password = pdok_owner
 port = 5432
 
 [gml_splitter]
-class = filters.gmlsplitter.GmlSplitter
+class = stetl.filters.gmlsplitter.GmlSplitter
 max_features = 15000
 start_container = <?xml version="1.0" encoding="UTF-8"?>
   <ogr:FeatureCollection
@@ -210,7 +210,7 @@ start_feature_markers = <ogr:featureMember
 end_feature_markers = </ogr:featureMember>
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = local-to-inspire-ad-sd.xsl
 
 
