--- a/examples/inspire/ps-natura2k-nl/etl.cfg
+++ b/examples/inspire/ps-natura2k-nl/etl.cfg
@@ -10,7 +10,7 @@
 chains = input_wfs|output_std
 
 [input_wfs]
-class = inputs.httpinput.HttpInput
+class = stetl.inputs.httpinput.HttpInput
 url = http://geodata.nationaalgeoregister.nl/natura2000/wfs
 parameters = {
 		'service' : 'WFS',
@@ -24,4 +24,4 @@ parameters = {
 #         'outputFormat' : 'text/xml; subtype=gml/2.1.2',
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
