--- a/examples/ordnancesurvey/stetl.cfg
+++ b/examples/ordnancesurvey/stetl.cfg
@@ -10,17 +10,17 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = postgres/create-schema.sql,postgres/create-tables.sql,postgres/create-indexes.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
-class = filters.stringfilter.StringSubstitutionFilter
+class = stetl.filters.stringfilter.StringSubstitutionFilter
 # format args {schema} is schema name
 format_args = schema:{schema}
 
 [output_postgres]
-class = outputs.dboutput.PostgresDbOutput
+class = stetl.outputs.dboutput.PostgresDbOutput
 database = {database}
 host = {host}
 port = {port}
@@ -31,7 +31,7 @@ schema = {schema}
 # The source input file(s) from dir and produce osmm:*Member elements
 # Namespaces are stripped as prep_osmgml.py uses non-namespaced xpath
 [input_big_gml_files]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = {gml_files}
 element_tags = topographicMember,boundaryMember,cartographicMember
 strip_namespaces = True
@@ -45,7 +45,7 @@ prep_class = python.prep_osmgml.prep_osmm_topo
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = {max_features}
 container_doc = <osgb:FeatureCollection
                         xmlns:osgb='http://www.ordnancesurvey.co.uk/xml/namespaces/osgb'
@@ -72,7 +72,7 @@ element_container_tag = FeatureCollection
 # are saved. It has to be the same file as in the ogr2ogr command.
 # TODO: find a way to use a GML-stream through stdin to ogr2ogr
 [output_ogr2ogr]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = {temp_dir}/osmm-tmp.gml
 gfs_file = gfs/osmm_topo_postgres.gfs
 # lco will only be added to ogr2ogr on first run
@@ -90,10 +90,10 @@ ogr2ogr_cmd = ogr2ogr
 
 # Send to stdout
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/osmm_topo_prepared.gml
 
 
