--- a/tests/configs/copy_in_out_file.cfg
+++ b/tests/configs/copy_in_out_file.cfg
@@ -4,9 +4,9 @@
 chains = input_file|output_file
 
 [input_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = {in_file}
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = {out_file}
