--- a/tests/filters/configs/xmlassembler.cfg
+++ b/tests/filters/configs/xmlassembler.cfg
@@ -5,22 +5,22 @@
 chains = parse_xml_file_input|xml_assembler|packet_buffer|output_std
 
 [input_glob_file]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy.gml
 
 # The source input file producing XML elements
 [parse_xml_file_filter]
-class = filters.xmlelementreader.XmlElementReader
+class = stetl.filters.xmlelementreader.XmlElementReader
 element_tags = FeatureMember
 
 [parse_xml_file_input]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 element_tags = FeatureMember
 file_path = tests/data/data_xmlassembler.gml
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = 2
 container_doc = <?xml version="1.0" encoding="UTF-8"?>
    <gml:FeatureCollectionT10NL
@@ -33,7 +33,7 @@ container_doc = <?xml version="1.0" encoding="UTF-8"?>
 element_container_tag = FeatureCollectionT10NL
 
 [packet_buffer]
-class = filters.packetbuffer.PacketBuffer
+class = stetl.filters.packetbuffer.PacketBuffer
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
