--- a/tests/inputs/configs/csvfileinput.cfg
+++ b/tests/inputs/configs/csvfileinput.cfg
@@ -4,11 +4,11 @@
 chains = input_csv_file|output_std
 
 [input_csv_file]
-class = inputs.fileinput.CsvFileInput
+class = stetl.inputs.fileinput.CsvFileInput
 file_path = tests/data/pandhoogtes.csv
 output_format = record
 delimiter = ,
 quote_char = "
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
