--- a/tests/inputs/configs/globfileinput.cfg
+++ b/tests/inputs/configs/globfileinput.cfg
@@ -5,12 +5,12 @@ chains = input_glob_file|output_std,
          input_glob_file_wildcard|output_std
 
 [input_glob_file]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy.gml
 
 [input_glob_file_wildcard]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy*.gml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
