--- a/tests/inputs/configs/linestreamerfileinput.cfg
+++ b/tests/inputs/configs/linestreamerfileinput.cfg
@@ -4,8 +4,8 @@
 chains = input_text_file|output_std
 
 [input_text_file]
-class = inputs.fileinput.LineStreamerFileInput
+class = stetl.inputs.fileinput.LineStreamerFileInput
 file_path = tests/data/cities.xml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
