--- a/tests/inputs/configs/mergermultiinput.cfg
+++ b/tests/inputs/configs/mergermultiinput.cfg
@@ -5,15 +5,15 @@ chains = (input_file_1) (input_file_2)|output_std,
 		 (input_file_1 | filter_null) (input_file_2 | filter_null)|output_std
 
 [input_file_1]
-class = inputs.fileinput.LineStreamerFileInput
+class = stetl.inputs.fileinput.LineStreamerFileInput
 file_path = tests/data/cities.xml
 
 [input_file_2]
-class = inputs.fileinput.LineStreamerFileInput
+class = stetl.inputs.fileinput.LineStreamerFileInput
 file_path = tests/data/pandhoogtes-klein.csv
 
 [filter_null]
-class = filters.nullfilter.NullFilter
+class = stetl.filters.nullfilter.NullFilter
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
