--- a/tests/inputs/configs/stringfileinput.cfg
+++ b/tests/inputs/configs/stringfileinput.cfg
@@ -5,13 +5,13 @@ chains = input_string_file|output_std,
          input_string_file_format_args|output_std
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/cities.xml
 
 [input_string_file_format_args]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/stringfileinput_formatargs.txt
 format_args = greeting:Hello name:NLExtract
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
