--- a/tests/outputs/configs/commandexecoutput.cfg
+++ b/tests/outputs/configs/commandexecoutput.cfg
@@ -4,11 +4,11 @@
 chains = input_string_file|output_exec
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/command.txt
 
 [output_exec]
-class = outputs.execoutput.CommandExecOutput
+class = stetl.outputs.execoutput.CommandExecOutput
 input_format = string
 env_args = pgpassword!postgres
 env_separator = !
