--- a/tests/outputs/configs/ogr2ogrexecoutput.cfg
+++ b/tests/outputs/configs/ogr2ogrexecoutput.cfg
@@ -11,60 +11,60 @@ chains = input_glob_file|output_ogr2ogr,
          input_glob_file_keep|output_ogr2ogr_no_cleanup
 
 [input_glob_file]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy.gml
 
 [input_glob_file_temp]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy_temp.gml
 
 [input_glob_file_keep]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/keep_dummy.gml
 
 [output_ogr2ogr]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 # destination format: OGR vector format name
 dest_format = PostgreSQL
 # destination datasource: name of datasource
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 
 [output_ogr2ogr_lco]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 # layer creation options will only be added to ogr2ogr on first run
 lco = -lco LAUNDER=YES -lco PRECISION=NO
 
 [output_ogr2ogr_spat]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = 140000 450000 150000 460000
 
 [output_ogr2ogr_options]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 -fieldTypeToString StringList --config PG_USE_COPY NO
 
 [output_ogr2ogr_gfs]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 # gfs template
 gfs_template = tests/data/gfs/top10-funcgebied.gfs
 
 [output_ogr2ogr_cleanup]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 cleanup_input = True
 
 [output_ogr2ogr_cleanup_gfs]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname=dummydb host=dummyhost port=dummyport user=dummyuser password=dummypassword active_schema=dummyschema"
 # gfs template
@@ -72,7 +72,7 @@ gfs_template = tests/data/gfs/top10-funcgebied.gfs
 cleanup_input = True
 
 [output_ogr2ogr_no_cleanup]
-class = outputs.execoutput.Ogr2OgrExecOutput
+class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 # destination format: OGR vector format name
 dest_format = PostgreSQL
 # destination datasource: name of datasource
