--- a/tests/outputs/configs/splittermultioutput.cfg
+++ b/tests/outputs/configs/splittermultioutput.cfg
@@ -4,11 +4,11 @@
 chains = input_file | (output_std_1)  (output_std_2)
 
 [input_file]
-class = inputs.fileinput.LineStreamerFileInput
+class = stetl.inputs.fileinput.LineStreamerFileInput
 file_path = tests/data/cities.xml
 
 [output_std_1]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
 
 [output_std_2]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
