--- a/examples/basics/2_xslt/etl.cfg
+++ b/examples/basics/2_xslt/etl.cfg
@@ -4,14 +4,14 @@
 chains = input_xml_file|transformer_xslt|output_file
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = input/cities.xml
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = cities2gml.xsl
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/gmlcities.gml
 
