--- a/examples/basics/6_cmdargs/etl.cfg
+++ b/examples/basics/6_cmdargs/etl.cfg
@@ -6,17 +6,17 @@
 # This makes an ETL chain highly reusable.
 
 [etl]
-chains = input_xml_file|transformer_xslt|output_file
+chains = stetl.input_xml_file|transformer_xslt|output_file
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = {in_xml}
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = {in_xsl}
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = {out_xml}
 
