--- a/examples/bgt/etl-bgt-shp.cfg
+++ b/examples/bgt/etl-bgt-shp.cfg
@@ -11,13 +11,13 @@ chains = input_big_gml_files|xml_assembler|transformer_xslt|output_ogr2ogr_json
 
 # The source input file(s) from dir and produce gml:featureMember elements
 [input_big_gml_files]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = {gml_input}
 element_tags = cityObjectMember
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = {max_in_memory_features}
 container_doc = <?xml version="1.0" encoding="UTF-8"?>
     <cit:CityModel xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -39,34 +39,34 @@ container_doc = <?xml version="1.0" encoding="UTF-8"?>
 element_container_tag = CityModel
 
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = bgt-to-gmlfc.xsl
 
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = {shp_output}
 
 # Output multiple files ala Top10 file chunks GML
 # Use numbering as in file expression.
 [output_multifile]
-class = outputs.fileoutput.MultiFileOutput
+class = stetl.outputs.fileoutput.MultiFileOutput
 file_path = {shp_output}
 
 [output_ogr2ogr]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = output/temp.gml
 ogr2ogr_cmd = ogr2ogr -f "ESRI Shapefile" -a_srs epsg:28992 output/bgt-sample-ogr.shp output/temp.gml
 
 [output_ogr2ogr_kml]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = output/temp.gml
 ogr2ogr_cmd = ogr2ogr -f "KML" -s_srs epsg:28992 -t_srs epsg:4326 output/bgt-sample-ogr.kml output/temp.gml
 
 [output_ogr2ogr_json]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = output/temp-json.gml
 ogr2ogr_cmd = ogr2ogr -f "GeoJSON" -overwrite -s_srs epsg:28992 -t_srs epsg:4326 output/bgt-sample-ogr.json output/temp-json.gml
 
