--- a/examples/top10nl/etl-top10nl.cfg
+++ b/examples/top10nl/etl-top10nl.cfg
@@ -29,22 +29,22 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
-class = inputs.fileinput.StringFileInput
+class =stetl. inputs.fileinput.StringFileInput
 file_path = sql/drop-tables.sql,sql/create-schema.sql
 
 # Post SQL file inputs to be executed
 [input_sql_post]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = sql/delete-duplicates.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
-class = filters.stringfilter.StringSubstitutionFilter
+class = stetl.filters.stringfilter.StringSubstitutionFilter
 # format args {schema} is schema name
 format_args = schema:{schema}
 
 [output_postgres]
-class = outputs.dboutput.PostgresDbOutput
+class = stetl.outputs.dboutput.PostgresDbOutput
 database = {database}
 host = {host}
 port = {port}
@@ -54,13 +54,13 @@ schema = {schema}
 
 # The source input file(s) from dir and produce gml:featureMember elements
 [input_big_gml_files]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = {gml_files}
 element_tags = featureMember
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
-class = filters.xmlassembler.XmlAssembler
+class = stetl.filters.xmlassembler.XmlAssembler
 max_elements = {max_features}
 container_doc = <?xml version="1.0" encoding="UTF-8"?>
    <gml:FeatureCollection
@@ -77,7 +77,7 @@ element_container_tag = FeatureCollection
 
 # Transforms into simple feature data (single geometry, single attrs)
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = top10-split_v1.1.1.xsl
 
 # The ogr2ogr command-line, may use any output here, as long as
@@ -85,7 +85,7 @@ script = top10-split_v1.1.1.xsl
 # are saved. It has to be the same file as in the ogr2ogr command.
 # TODO: find a way to use a GML-stream through stdin to ogr2ogr
 [output_ogr2ogr]
-class = outputs.ogroutput.Ogr2OgrOutput
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = {temp_dir}/top10-tmp.gml
 gfs_file = top10-v1.1.1.gfs
 # lco will only be added to ogr2ogr on first run
@@ -107,7 +107,7 @@ ogr2ogr_cmd = ogr2ogr
 
 # Validator for XML
 [xml_schema_validator]
-class = filters.xmlvalidator.XmlSchemaValidator
+class = stetl.filters.xmlvalidator.XmlSchemaValidator
 xsd = http://www.kadaster.nl/schemas/top10nl/v20120116/TOP10NL_1_1_1.xsd
 enabled = True
 
@@ -115,15 +115,15 @@ enabled = True
 
 # Send to stdout
 [output_std]
-class = outputs.standardoutput.StandardXmlOutput
+class = stetl.outputs.standardoutput.StandardXmlOutput
 
 [output_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/top10nl-fc.gml
 
 # Output multiple files ala Top10 file chunks GML
 # Use numbering as in file expression.
 [output_multifile]
-class = outputs.fileoutput.MultiFileOutput
+class = stetl.outputs.fileoutput.MultiFileOutput
 file_path = output/top10nl-%03d.gml
 
