--- a/tests/configs/copy_in_out.cfg
+++ b/tests/configs/copy_in_out.cfg
@@ -4,8 +4,8 @@
 chains = input_xml_file|output_std
 
 [input_xml_file]
-class = inputs.fileinput.XmlFileInput
+class = stetlinputs.fileinput.XmlFileInput
 file_path = tests/data/cities.xml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
