--- a/tests/filters/configs/packetwriter.cfg
+++ b/tests/filters/configs/packetwriter.cfg
@@ -4,13 +4,13 @@
 chains = parse_file_input|packet_writer|output_std
 
 [parse_file_input]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/dummy.gml
 
 # Writes the payload of a packet as a string to a file
 [packet_writer]
-class = filters.packetwriter.PacketWriter
+class = stetl.filters.packetwriter.PacketWriter
 file_path = tests/data/temp/tempfile.gml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
