--- a/tests/filters/configs/regexfilter.cfg
+++ b/tests/filters/configs/regexfilter.cfg
@@ -4,15 +4,15 @@
 chains = input_string_file|regex_filter|packet_buffer|output_std
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/ogrinfo_output.txt
 
 [regex_filter]
-class = filters.regexfilter.RegexFilter
+class = stetl.filters.regexfilter.RegexFilter
 pattern_string = .*Layer name: (\w+:)?(?P<elemtype>\w+).*Feature Count: (?P<featurecount>[0-9]+).*
 
 [packet_buffer]
-class = filters.packetbuffer.PacketBuffer
+class = stetl.filters.packetbuffer.PacketBuffer
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
