--- a/tests/filters/configs/sieve.cfg
+++ b/tests/filters/configs/sieve.cfg
@@ -4,18 +4,18 @@
 chains = input_csv_file|attr_value_sieve|packet_buffer|output_std
 
 [input_csv_file]
-class = inputs.fileinput.CsvFileInput
+class = stetl.inputs.fileinput.CsvFileInput
 file_path = tests/data/cities.csv
 
 [attr_value_sieve]
-class = filters.sieve.AttrValueRecordSieve
+class = stetl.filters.sieve.AttrValueRecordSieve
 input_format = record_array
 output_format = record_array
 attr_name = city
 attr_values = amsterdam,otterlo
 
 [packet_buffer]
-class = filters.packetbuffer.PacketBuffer
+class = stetl.filters.packetbuffer.PacketBuffer
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
