--- a/tests/filters/configs/stringsubstitutionfilter.cfg
+++ b/tests/filters/configs/stringsubstitutionfilter.cfg
@@ -4,16 +4,16 @@
 chains = input_string_file|string_sub_filter|packet_buffer|output_std
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/stringfileinput_formatargs.txt
 
 [string_sub_filter]
-class = filters.stringfilter.StringSubstitutionFilter
+class = stetl.filters.stringfilter.StringSubstitutionFilter
 format_args = greeting@Hello name@NLExtract
 separator = @
 
 [packet_buffer]
-class = filters.packetbuffer.PacketBuffer
+class = stetl.filters.packetbuffer.PacketBuffer
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
