--- a/tests/filters/configs/xmlelementreader.cfg
+++ b/tests/filters/configs/xmlelementreader.cfg
@@ -6,28 +6,28 @@ chains = input_glob_file|parse_xml_file|output_std,
          input_glob_file_no_namespace|parse_xml_file_no_namespace|output_std
 
 [input_glob_file]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/dummy.gml
 
 # The source input file producing XML elements
 [parse_xml_file]
-class = filters.xmlelementreader.XmlElementReader
+class = stetl.filters.xmlelementreader.XmlElementReader
 element_tags = FeatureMember
 
 # Strip namespace from XML elements
 [parse_xml_file_strip_namespace]
-class = filters.xmlelementreader.XmlElementReader
+class = stetl.filters.xmlelementreader.XmlElementReader
 element_tags = FeatureMember
 strip_namespaces = True
 
 # XML file without namespace
 [input_glob_file_no_namespace]
-class = inputs.fileinput.GlobFileInput
+class = stetl.inputs.fileinput.GlobFileInput
 file_path = tests/data/cities.xml
 
 [parse_xml_file_no_namespace]
-class = filters.xmlelementreader.XmlElementReader
+class = stetl.filters.xmlelementreader.XmlElementReader
 element_tags = city
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
