--- a/tests/filters/configs/xsltfilter.cfg
+++ b/tests/filters/configs/xsltfilter.cfg
@@ -4,16 +4,16 @@
 chains = parse_xml_file_input|transformer_xslt|packet_buffer|output_std
 
 [parse_xml_file_input]
-class = inputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = tests/data/dummy.gml
 
 # Transforms into simple/flat feature data (single geometry per feature type, single attrs)
 [transformer_xslt]
-class = filters.xsltfilter.XsltFilter
+class = stetl.filters.xsltfilter.XsltFilter
 script = tests/data/xslt/dummy.xslt
 
 [packet_buffer]
-class = filters.packetbuffer.PacketBuffer
+class = stetl.filters.packetbuffer.PacketBuffer
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
