--- a/tests/filters/configs/zipfileextractor.cfg
+++ b/tests/filters/configs/zipfileextractor.cfg
@@ -4,14 +4,14 @@
 chains = input_zip_file|extract_zip_file|output_std
 
 [input_zip_file]
-class = inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = tests/data/zipfileinput.zip
 name_filter = *.[gG][mM][lL]
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
-class=filters.zipfileextractor.ZipFileExtractor
+class = stetl.filters.zipfileextractor.ZipFileExtractor
 file_path = tests/data/temp/tempfile.gml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
