--- a/tests/inputs/configs/jsonfileinput.cfg
+++ b/tests/inputs/configs/jsonfileinput.cfg
@@ -4,9 +4,9 @@
 chains = input_csv_file|output_std
 
 [input_csv_file]
-class = inputs.fileinput.JsonFileInput
+class = stetl.inputs.fileinput.JsonFileInput
 file_path = tests/data/menu.json
 output_format = struct
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
