--- a/tests/inputs/configs/ogrinput.cfg
+++ b/tests/inputs/configs/ogrinput.cfg
@@ -4,7 +4,7 @@
 chains = input_ogr|output_std
 
 [input_ogr]
-class = inputs.ogrinput.OgrInput
+class = stetl.inputs.ogrinput.OgrInput
 data_source = tests/data/cities.gml
 source_format = GML
 source_options = {'GDAL_CACHEMAX': '64', 'CPL_DEBUG': 'OFF'}
@@ -13,4 +13,4 @@ file_path = tests/data/cities.xml
 element_tags = city
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
