--- a/tests/inputs/configs/xmlelementstreamerfileinput.cfg
+++ b/tests/inputs/configs/xmlelementstreamerfileinput.cfg
@@ -4,9 +4,9 @@
 chains = input_xml_file|output_std
 
 [input_xml_file]
-class = inputs.fileinput.XmlElementStreamerFileInput
+class = stetl.inputs.fileinput.XmlElementStreamerFileInput
 file_path = tests/data/cities.xml
 element_tags = city
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
