--- a/tests/inputs/configs/zipfileinput.cfg
+++ b/tests/inputs/configs/zipfileinput.cfg
@@ -5,13 +5,13 @@ chains = input_zip_file|output_std,
          input_zip_file_name_filter|output_std
 
 [input_zip_file]
-class = inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = tests/data/zipfileinput.zip
 
 [input_zip_file_name_filter]
-class = inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = tests/data/zipfileinput.zip
 name_filter = *.[gG][mM][lL]
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
