--- a/tests/outputs/configs/postgresdboutput.cfg
+++ b/tests/outputs/configs/postgresdboutput.cfg
@@ -4,11 +4,11 @@
 chains = input_string_file|output_postgres
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/dummy.sql
 
 [output_postgres]
-class = outputs.dboutput.PostgresDbOutput
+class = stetl.outputs.dboutput.PostgresDbOutput
 database = database
 host = host
 port = port
