--- a/tests/outputs/configs/standardoutput.cfg
+++ b/tests/outputs/configs/standardoutput.cfg
@@ -4,8 +4,8 @@
 chains = input_string_file|output_std
 
 [input_string_file]
-class = inputs.fileinput.StringFileInput
+class = stetl.inputs.fileinput.StringFileInput
 file_path = tests/data/cities.xml
 
 [output_std]
-class = outputs.standardoutput.StandardOutput
+class = stetl.outputs.standardoutput.StandardOutput
