--- a/tests/configs/copy_in_out.cfg
+++ b/tests/configs/copy_in_out.cfg
@@ -4,7 +4,7 @@
 chains = input_xml_file|output_std
 
 [input_xml_file]
-class = stetlinputs.fileinput.XmlFileInput
+class = stetl.inputs.fileinput.XmlFileInput
 file_path = tests/data/cities.xml
 
 [output_std]
