Fix nose test commandexecfilter

--- a/tests/filters/configs/commandexecfilter.cfg
+++ b/tests/filters/configs/commandexecfilter.cfg
@@ -1,7 +1,7 @@
 # Config file for unit testing CommandExecFilter.
 
 [etl]
-chains = stetl.input_string_file|command_executor|packet_buffer|output_std
+chains = input_string_file|command_executor|packet_buffer|output_std
 
 [input_string_file]
 class = stetl.inputs.fileinput.StringFileInput
