--- a/examples/basics/12_gdal_ogr/etl.cfg
+++ b/examples/basics/12_gdal_ogr/etl.cfg
@@ -45,7 +45,7 @@ output_format = geojson_collection
 # FILTERS
 #
 [ogr_feature_to_geojson_feature]
-class = filters.formatconverter.FormatConverter
+class = stetl.filters.formatconverter.FormatConverter
 input_format = ogr_feature
 output_format = geojson_feature
 
@@ -60,7 +60,7 @@ input_format = geojson_collection
 output_format = ogr_feature_array
 
 [tolowercase_filter]
-class = stetl.tolowerfilter.ToLowerFilter
+class = tolowerfilter.ToLowerFilter
 
 #
 # OUTPUTS
