--- a/examples/basics/6_cmdargs/etl.cfg
+++ b/examples/basics/6_cmdargs/etl.cfg
@@ -6,7 +6,7 @@
 # This makes an ETL chain highly reusable.
 
 [etl]
-chains = stetl.input_xml_file|transformer_xslt|output_file
+chains = input_xml_file|transformer_xslt|output_file
 
 [input_xml_file]
 class = stetl.inputs.fileinput.XmlFileInput
