#23 #81 original Dockerfile building/working, path fix 10_jinja2 ex, docker-run examples script

--- a/examples/basics/10_jinja2_templating/etl.cfg
+++ b/examples/basics/10_jinja2_templating/etl.cfg
@@ -26,7 +26,7 @@ class = stetl.filters.templatingfilter.Jinja2TemplatingFilter
 template_file = templates/cities-json2xml.jinja2
 
 [output_xml_file]
-class = outputs.fileoutput.FileOutput
+class = stetl.outputs.fileoutput.FileOutput
 file_path = output/cities.xml
 
 
